--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "predeploy": "npm run build"
   },
   "dependencies": {
+    "framer-motion": "^11.11.7",
     "lucide-react": "^0.445.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2"
   },
@@ -29,6 +31,7 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
+    "gh-pages": "^6.1.1",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.12",
